# NFL

./: .gitignore  README.md  finetune_best_model.py  pyproject.toml  requirements.txt  setup_colab.sh  setup_local.sh  train_production.py
configs/: high_accuracy.yaml  max_accuracy_rtx3050.yaml  pre_cache.txt  probabilistic.yaml  production.yaml  sanity.yaml
docs/: api_reference.md  architecture.md  configuration.md  data_dictionary.md  data_pipeline.md  deployment_guide.md  installation.md  performance.md  production_training_guide.md  testing.md  usage.md
models/exported/: model_config.json  nfl_production_model.py
nfl_big_data_bowl_2026.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebooks/: 01_eda.ipynb  02_baseline_model.ipynb  03_insights.ipynb  04_submission.ipynb  colab_train_high_accuracy.ipynb
outputs/: nfl_best_quality_config.json  nfl_high_accuracy_config.json  nfl_optimized_quality_config.json  nfl_production_v2_config.json  nfl_worldclass_config.json  splits_production.json
scripts/: analyze_data.py
src/: competition_metrics.py  competition_output.py  data_loader.py  features.py  inference.py  metrics.py  train.py  visualization.py
src/config/: __init__.py  data_config.py  (+2 more)
tests/: conftest.py  debug_train.py  hardcore_checkpoint_test.py  test_config.py  test_data_loader.py  test_ensemble.py  test_features.py  test_gnn.py  test_integration.py  test_metrics.py  test_train.py  test_transformer.py  test_viz.py  verify_model.py  verify_phase1.py  verify_phase10.py  verify_phase11.py  verify_phase8.py  verify_phase9.py  verify_rules.py
(+8 files in other folders)
