[project]
name = "nfl-big-data-bowl-2026"
version = "0.1.0"
description = "NFL Big Data Bowl 2026 Analytics Track Submission"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "polars>=0.20.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "duckdb>=0.10.0",
    "xgboost>=2.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    "jupyter>=1.0.0",
    "mlflow>=2.10.0",
    "torch>=2.2.0",
    "pytorch-lightning>=2.2.0"
]

[tool.setuptools]
packages = ["src"]
